--- a/page.html
+++ b/page.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Celebrity Carbon Emissions Counter</h1>
-        <p>Carbon emissions produced by the celebrity:</p>
+        <h1>Taylor Swift Carbon Emissions Counter</h1>
+        <p>Carbon emissions produced by Taylor Swift in 2024!:</p>
         <p id="carbonCount"></p>
     </div>
 
