--- a/page.html
+++ b/page.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <h1>Taylor Swift Carbon Emissions Counter</h1>
-        <p>Carbon emissions produced by Taylor Swift in 2024!:</p>
+        <p>Carbon emissions produced by Taylor Swift in 2024:</p>
         <p id="carbonCount"></p>
     </div>
 
