--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celebrity Carbon Emissions Counter</title>
+    <title>Taylor Swift Carbon Emissions Counter</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -135,7 +135,7 @@
 
     <!-- Made by information -->
     <div id="madeBy">
-        Made by JohanLiebert-II on GitHub | AKA Alfie Corthine
+        Made by AlfieCorthine on GitHub
     </div>
 
     <!-- Plane animation -->
